fix: build core module